2013-February-22 Chris Morley

	* src/RWmatrix.cpp,	src/RWMatrix.h: functions to read and write Hessian
	matrices to CML. These files and the RWMatrix class are temporary until
	a suitable home is found for the functions.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: make experimental
	  matrix entry more CML compliant.
	* src/MolecularComponents.cpp: commented out code at line 218 to test
	  RWMatrix functions.

	* src/plugins/fitting.cpp: output hessian to XML (not fully tested)
	* src/System.cpp, src/System.h: make PersistPtr to current analysis element
	  available.

	* src/main.cpp: use throwing std::logic_error to terminate after writing
	  XML output (for debugging).

	* src/Persistence.h, src/XMLPersist.cpp, src/XMLPersist.h: correct
	  parameters of XmlWrite().

2013-February-18 Struan Robertson

	* MolecularComponents.cpp: Minor refactoring.
	
	* Butyl_H_to_Butane.xml: Initial revision - example to be used for eigenmode 
	projection project.

2013-February-10 Struan Robertson

	* Acetyl_O2_association.xml: Baseline updated related to VS9/VS10 differences.

2013-February-10 Struan Robertson

	* CollisionOperator.cpp: Further fix for mean energy output for the case
	where population is zero.

2013-February-08 Struan Robertson

	* CollisionOperator.cpp: Fix for mean energy output added.

2013-February-07 Struan Robertson

    Changes entered on behalf of Robin Shannon.

	* CollisionOperator.cpp: Fix to use specified initial distribution.

	* MolecularComponents.cpp: Check added for zero torsional moment of inertia.

	* unitsConversion.cpp: Atomic mass table updated.

2013-January-22 Chris Morley

	* src/plugins/UnitTests.cpp: correct error which was prematurely
	terminating anharmonic tests

	* MesmerQA/UnitTests/baselines/Win32/mesmer.test: revert this baseline
	which was subject to the above error. Still differences to be resolved.

	src/DensityOfStates.h: some runtime documentation

2013-January-21 Struan Robertson
