@@ -140,7 +140,6 @@
     <ClCompile Include="..\..\src\plugins\simplecalc.cpp" />
     <ClCompile Include="..\..\src\plugins\SimpleILT.cpp" />
     <ClCompile Include="..\..\src\plugins\SimpleRRKM.cpp" />
-    <ClCompile Include="..\..\src\RWmatrix.cpp" />
     <ClCompile Include="..\..\src\Spline.cpp" />
     <ClCompile Include="..\..\src\System.cpp" />
     <ClCompile Include="..\..\src\plugins\ThermodynamicTable.cpp" />
@@ -188,7 +187,6 @@
     <ClInclude Include="..\..\src\Rdouble.h" />
     <ClInclude Include="..\..\src\Reaction.h" />
     <ClInclude Include="..\..\src\ReactionManager.h" />
-    <ClInclude Include="..\..\src\RWMatrix.h" />
     <ClInclude Include="..\..\src\Spline.h" />
     <ClInclude Include="..\..\src\System.h" />
     <ClInclude Include="..\..\src\TimeCounter.h" />
