@@ -115,8 +115,9 @@ namespace mesmer
     std::string m_EnergyConvention;
     //================================================
 
-    std::vector<double> m_eleExc;   // Electronic excitation(for OH, NO, NS otherwise no member).
+    std::vector<double> m_eleExc  ; // Electronic excitation (E.g. OH, NO, NS, otherwise no member).
     std::vector<double> m_VibFreq ; // Values of vibrational frequencies.
+	dMatrix            *m_Hessian ; // Hessian matrix (If supplied, used to calculate vibrational frequncies).
 
   protected:
 
